Graduate work. Search system